--- a/result.html
+++ b/result.html
@@ -12,14 +12,14 @@
     <h1>購買成功</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- <script>
+    <script>
         window.onload = function(){
             axios.post("http://localhost:3000/return")
             .then((res)=>{
                 console.log('res',res)
             })
         }    
-    </script> -->
+    </script>
     
 </body>
 </html>
